unpackaged/main/default/objects/Marketing_Program__c/fields/Allowed_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Profiles__c</fullName>
    <description>Profiles Allowed to add this marketing program to Drive or Account</description>
    <label>Allowed Profiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor Marketing</fullName>
            </value>
            <value>
                <fullName>Global Admin</fullName>
            </value>
            <value>
                <fullName>DRD Profile</fullName>
            </value>
            <value>
                <fullName>APS Admin</fullName>
            </value>
            <value>
                <fullName>APS Management</fullName>
            </value>
            <value>
                <fullName>APS Scheduler</fullName>
            </value>
            <value>
                <fullName>Biomed Read Only</fullName>
            </value>
            <value>
                <fullName>Recruitment Admin</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Collection Management</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Schedule Viewers</fullName>
            </value>
            <value>
                <fullName>APS Planner</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Telecruiter</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>DRD Manager</fullName>
            </value>
            <value>
                <fullName>AM Profile</fullName>
                <isActive>false</isActive>
                <label>AM Profile</label>
            </value>
            <value>
                <fullName>BPM Profile</fullName>
                <isActive>false</isActive>
                <label>BPM Profile</label>
            </value>
            <value>
                <fullName>DM Profile</fullName>
                <isActive>false</isActive>
                <label>DM Profile</label>
            </value>
            <value>
                <fullName>Skedulo</fullName>
                <isActive>false</isActive>
                <label>Skedulo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>