unpackaged/main/default/objects/Marketing_Program__c/fields/Booking_Period_Active__c.field-meta.xml
<CustomField>
    <fullName>Booking_Period_Active__c</fullName>
    <formula>IF(
(TODAY() &gt;= Booking_Start_Date__c  &amp;&amp; TODAY() &lt;=  Booking_End_Date__c ), TRUE,FALSE)  || 

IF(
(TODAY() &gt;= Booking_Start_Date__c  &amp;&amp; ISBLANK(Booking_End_Date__c) ), TRUE,FALSE)  || 

IF(
(ISBLANK(Booking_Start_Date__c)  &amp;&amp; TODAY() &lt;=  Booking_End_Date__c ), TRUE,FALSE)  || 

IF(
(ISBLANK(Booking_Start_Date__c)   &amp;&amp; ISBLANK(Booking_End_Date__c) ), TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Period Active</label>
    <type>Checkbox</type>
</CustomField>