unpackaged/main/default/objects/Marketing_Program__c/fields/Booking_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Start_Date__c</fullName>
    <inlineHelpText>Use Change Booking Dates Button for changing the Booking Dates</inlineHelpText>
    <label>Booking Start Date</label>
    <type>Date</type>
</CustomField>