unpackaged/main/default/objects/Marketing_Program__c/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <label>Drive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <default>true</default>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>Fixed Site</fullName>
                <isActive>false</isActive>
                <label>Fixed Site</label>
            </value>
            <value>
                <fullName>RSMO</fullName>
                <isActive>false</isActive>
                <label>RSMO</label>
            </value>
            <value>
                <fullName>Site Only</fullName>
                <isActive>false</isActive>
                <label>Site Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>