unpackaged/main/default/objects/Marketing_Program__c/fields/Nationwide_Marketing_Program__c.field-meta.xml
<CustomField>
    <fullName>Nationwide_Marketing_Program__c</fullName>
    <label>Nationwide Marketing Program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>