unpackaged/main/default/objects/Marketing_Program__c/fields/Recruited_By__c.field-meta.xml
<CustomField>
    <fullName>Recruited_By__c</fullName>
    <label>Recruited By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRD Recruited</fullName>
            </value>
            <value>
                <fullName>D2D Recruited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>