unpackaged/main/default/objects/Marketing_Program__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>was Hemasphere Type</description>
    <label>Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>