unpackaged/main/default/objects/Marketing_Program__c/fields/UFID__c.field-meta.xml
<CustomField>
    <fullName>UFID__c</fullName>
    <description>User-friendly ID Auto-populated by UFID AN and process builder. Read only to all profiles.</description>
    <externalId>true</externalId>
    <label>UFID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>