unpackaged/main/default/objects/Marketing_Program__c/recordTypes/Marketing_Program.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Program</fullName>
    <active>true</active>
    <label>Marketing Program</label>
</RecordType>