unpackaged/main/default/objects/Marketing_Program__c/validationRules/BookingEndDate_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>BookingEndDate_Check</fullName>
    <active>true</active>
    <description>HRP-4876:System Enforcing Affiliation End Dates Cannot Be Prior to Start Dates</description>
    <errorConditionFormula>Booking_End_Date__c  &lt;  Booking_Start_Date__c</errorConditionFormula>
    <errorMessage>Booking End Date Should Not be Prior to Booking Start Date</errorMessage>
</ValidationRule>