unpackaged/main/default/objects/Marketing_Program__c/validationRules/EndDate_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Check</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date  Should Not be Prior to StartDate</errorMessage>
</ValidationRule>