unpackaged/main/default/objects/Marketing_Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Drive_Type__c</columns>
    <columns>Scope__c</columns>
    <columns>Recruited_By__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Booking_Start_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Booking_End_Date__c</columns>
    <columns>Allowed_Profiles__c</columns>
    <columns>Nationwide_Marketing_Program__c</columns>
    <columns>UFID__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>